<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />

        <import type="com.app.weatherapp.util.Utils" />

        <variable
            name="weatherData"
            type="com.app.weatherapp.responseobject.WeatherData" />

        <variable
            name="viewmodel"
            type="com.app.weatherapp.home.ui.home.HomeViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/PrimaryBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.ui.home.HomeFragment">

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorSecondary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar_search_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etSearch"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_icon_ionic_ios_search"
                    android:drawablePadding="@dimen/dimen_8dp"
                    android:hint="@string/search_city"
                    android:inputType="text"
                    android:minHeight="@dimen/dimen_40dp"
                    android:padding="@dimen/dimen_4dp"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color" />


            </RelativeLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSearch"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dimen_4dp"
            app:cardElevation="@dimen/dimen_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSearch">

            <com.app.weatherapp.util.MaxHeightRecyclerView
                android:id="@+id/rvCities"
                cityList="@{viewmodel.cityList.data}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llSearch"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:rvMaxHeight="@dimen/dimen_250dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_city" />

        </androidx.cardview.widget.CardView>

        <ScrollView
            style="@style/PrimaryBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSearch"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSearch">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/dimen_16dp"
                    android:paddingEnd="@dimen/dimen_16dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="@{String.format(@string/concat_using_comma, weatherData.name, weatherData.sys.country)}"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/txt_24sp"
                        tools:text="London, UK" />

                    <TextView
                        android:id="@+id/tvClouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:fontFamily="@font/sans_regular"
                        android:text="@{weatherData.weather != null ? weatherData.weather.get(0).description : @string/empty_string}"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/txt_16sp"
                        tools:text="Clouds" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivWeather"
                            iconPath="@{weatherData.weather != null ? weatherData.weather.get(0).icon : @string/empty_string}"
                            android:layout_width="@dimen/dimen_80dp"
                            android:layout_height="@dimen/dimen_80dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/tvTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="@font/sans_medium"
                            android:text="@{Html.fromHtml(@string/temp_unit(weatherData.main.temp))}"
                            android:textColor="@color/primary_text_color"
                            android:textSize="@dimen/txt_51sp"
                            tools:text="24" />

                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dimen_60dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/llMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:minWidth="@dimen/dimen_80dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvHumidityValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sans_medium"
                                android:text="@{Html.fromHtml(@string/humidity_unit(weatherData.main.humidity))}"
                                android:textColor="@color/primary_text_color"
                                android:textSize="@dimen/txt_20sp"
                                tools:text="20" />


                            <TextView
                                android:id="@+id/tvHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sans_regular"
                                android:text="@string/humidity"
                                android:textColor="@color/primary_text_color"
                                android:textSize="@dimen/txt_16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llFeelsLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_24dp"
                            android:layout_marginEnd="@dimen/dimen_24dp"
                            android:gravity="center"
                            android:minWidth="@dimen/dimen_100dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTemperatureFeelsLike"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sans_medium"
                                android:text="@{Html.fromHtml(@string/temp_unit(weatherData.main.FeelsLike))}"
                                android:textColor="@color/primary_text_color"
                                android:textSize="@dimen/txt_20sp"
                                tools:text="25" />


                            <TextView
                                android:id="@+id/tvFeelsLike"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sans_regular"
                                android:text="@string/feels_like"
                                android:textColor="@color/primary_text_color"
                                android:textSize="@dimen/txt_16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:minWidth="@dimen/dimen_80dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvWindValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sans_medium"
                                android:text="@{Html.fromHtml(@string/wind_unit(weatherData.wind.speed))}"
                                android:textColor="@color/primary_text_color"
                                android:textSize="@dimen/txt_20sp"
                                tools:text="28" />


                            <TextView
                                android:id="@+id/tvWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sans_regular"
                                android:text="@string/wind"
                                android:textColor="@color/primary_text_color"
                                android:textSize="@dimen/txt_16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvEmptyView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:fontFamily="@font/sans_medium"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/empty_text"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/txt_31sp" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>